# tasa_v2/back/tasa_microservice/project/views/stage.py
@@ -1,3 +1,5 @@
+import connexion
+
 from project.services.stage_service import StageServices
 
 
@@ -25,6 +27,31 @@ def get_stage_one(land_id):
     except Exception as exception:
         result = exception.args[0]
         results['details'].append(result)
+    return results
+
+
+def set_stage_one():
+    con = connexion.request
+    results = {
+            "data": [],
+            "details": []
+        }
+    return results
+
+def upload_file():
+    files = connexion.request.files
+    results = {
+            "data": [],
+            "details": []
+        }
+
+    try:        
+        result = StageServices().upload_file(files)
+        results = result
+    except Exception as exception:
+        result = exception.args[0]
+        results['details'].append(result)
+
     return results
 
 def calendar_stage(id_lote):
